<resources>
    <string name="app_name">Firebase auth with Digits demo</string>
    <string name="sign_in_with_digits">Sign In with Digits</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete account</string>

    <string name="intro">This application demonstrates how you can Sign In to Firebase using Digits</string>
    <string name="cta">Now Sign in!</string>

    <string name="welcome">Welcome!</string>
    <string name="uid_text">Your Firebase User ID is:</string>
    <string name="email_text">Your Email is:</string>
    <string name="phone_text">Your Phone number is:</string>

\    <string name="need_fresh_sign_in_title">Delete account</string>
    <string name="need_fresh_sign_in_text">You need to be freshly signed-in to delete the account. Please sign-out and sign-in.</string>
</resources>
